--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="/Gron-bygg/libs/bootstrap/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- fontawesome.com -->
 </head>
-    <body>
+    <body> <meta name="google-site-verification" content="ZcVfLN_Qr3BhKJhsBIsrHu68bhbpWWmGUBHSlr1W25c" />
         <nav>
             <div>
                 <ul class="navbar">
