--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>Gron bygg | Home</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="Gronbygg/style.css" />
     <link href="/Gronbygg/libs/fontawesome/css/all.css" rel="stylesheet">
     <link rel="stylesheet" href="/Gronbygg/libs/font-awesome/css/font-awesome.min.css">
     <link href="/Gronbygg/libs/bootstrap/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
