--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="google-site-verification" content="ZcVfLN_Qr3BhKJhsBIsrHu68bhbpWWmGUBHSlr1W25c" />
 </head>
     <body>
+        <img src="img/img.png"
         <nav>
             <div>
                 <ul class="navbar">
