--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <li><a href="info.html"><i class="fa fa-info fa-2x"></i></a></li>
                 </ul>
             </div>
-            <img src="img/img.png" width="100%" 
+            <img src="img/img.png" width="100%" height="100%"
             <form type="Get" action="contact.html">
                 <div class="search-box">
                     <input class="search-txt" placeholder="Сontact search | Kontakta sök" id="Search" type="text" name="search">
