--- a/index.html
+++ b/index.html
@@ -19,7 +19,16 @@
                     <li><a href="info.html"><i class="fa fa-info fa-2x"></i></a></li>
                 </ul>
             </div>
-            background: url(img/img.png)
+              <style type="text/css">
+               BODY {
+               margin: 0; /* Убираем отступы в браузере */
+               }
+               #toplayer {
+               background: url(img/img.png); /* Параметры фона */
+               height: 1000px; /* Высота слоя */
+               border-bottom: 2px solid maroon; /* Параметры линии внизу */
+               }
+              </style>
             <form type="Get" action="contact.html">
                 <div class="search-box">
                     <input class="search-txt" placeholder="Сontact search | Kontakta sök" id="Search" type="text" name="search">
