--- a/index.html
+++ b/index.html
@@ -20,13 +20,12 @@
                 </ul>
             </div>
               <style type="text/css">
-               BODY {
+               body {
                margin: 0; /* Убираем отступы в браузере */
                }
                #toplayer {
-               background: url(img/img.png); /* Параметры фона */
-               height: 1000px; /* Высота слоя */
-               border-bottom: 2px solid maroon; /* Параметры линии внизу */
+               background: url(https://gronbygg.github.io/Gronbygg/img/img.png);
+               height: 42px;
                }
               </style>
             <form type="Get" action="contact.html">
