--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                height: 42px;
                }
               </style>
+              <div id="toplayer">
+              <img src="img/img.png" width="1000" height="1000" >
+              </div>
             <form type="Get" action="contact.html">
                 <div class="search-box">
                     <input class="search-txt" placeholder="Сontact search | Kontakta sök" id="Search" type="text" name="search">
