--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
                margin: 0; /* Убираем отступы в браузере */
                }
                #toplayer {
-               background: url(https://gronbygg.github.io/Gronbygg/img/img.png);
-               height: 42px;
+               background: url(https://gronbygg.github.io/Gronbygg/img/img.png) 50%;
                }
               </style>
               <div id="toplayer">
