--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                margin: 0; /* Убираем отступы в браузере */
                }
                #toplayer {
-               background: url(https://gronbygg.github.io/Gronbygg/img/img.png) 50%;
+               background: url(https://gronbygg.github.io/Gronbygg/img/img.png) 50% no-repeat;
                }
               </style>
               <div id="toplayer">
