--- a/index.html
+++ b/index.html
@@ -19,16 +19,8 @@
                     <li><a href="info.html"><i class="fa fa-info fa-2x"></i></a></li>
                 </ul>
             </div>
-              <style type="text/css">
-               body {
-               margin: 0; /* Убираем отступы в браузере */
-               }
-               #toplayer {
-               background: url(https://gronbygg.github.io/Gronbygg/img/img.png) 50% no-repeat;
-               }
-              </style>
               <div id="toplayer">
-                  
+                  img
               </div>
             <form type="Get" action="contact.html">
                 <div class="search-box">
