--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 </ul>
             </div>
               <div id="toplayer">
-                  img src="https://gronbygg.github.io/Gronbygg/img/img.png"
+                  <img src="https://gronbygg.github.io/Gronbygg/img/img.png">
               </div>
             <form type="Get" action="contact.html">
                 <div class="search-box">
