--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
                 </div>
                <div>
                 <ul class="navbar">
-                    <li><a class="active" href="index.html"><i class="fa fa-home fa-2x"></i></a></li>
-                    <li><a href="contact.html"><i class="fa fa-address-book fa-2x"></i></a></li>
-                    <li><a href="info.html"><i class="fa fa-info fa-2x"></i></a></li>
+                    <a class="active" href="index.html"><i class="fa fa-home fa-2x"></i></a><a href="contact.html"><i class="fa fa-address-book fa-2x"></i></a><a href="info.html"><i class="fa fa-info fa-2x"></i></a>
                 </ul>
             </div>
             </form>
