--- a/index.html
+++ b/index.html
@@ -20,10 +20,8 @@
                         <i class="fas fa-search"></i>
                     </button>
                 </div>
-               <div>
-                <block class="navbar">
+               <div class="navbar">
                     <li><a class="active" href="index.html"><i class="fa fa-home fa-2x"></i></a><a href="contact.html"><i class="fa fa-address-book fa-2x"></i></a><a href="info.html"><i class="fa fa-info fa-2x"></i></a></li>
-                </block>
             </div>
             </form>
         </nav>
