--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     </button>
                 </div>
                <div class="navbar">
-                    <li><a class="active" href="index.html"><i class="fa fa-home fa-2x"></i></a><a href="contact.html"><i class="fa fa-address-book fa-2x"></i></a><a href="info.html"><i class="fa fa-info fa-2x"></i></a></li>
+                    <a class="active" href="index.html"><i class="fa fa-home fa-2x"></i></a><a href="contact.html"><i class="fa fa-address-book fa-2x"></i></a><a href="info.html"><i class="fa fa-info fa-2x"></i><="info.html"><i class="fa fa-info fa-2x"></i></a>
             </div>
             </form>
         </nav>
