--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     </button>
                 </div>
                <div class="navbar">
-                    <a class="active" href="index.html"></a><a href="contact.html"></a><a href="info.html"><</a>
+                    <a class="active" href="index.html"><p>Home</p></a><a href="contact.html"><p>Contact</p></a><a href="info.html"><p>Info</p></a>
             </div>
             </form>
         </nav>
