--- a/index.html
+++ b/index.html
@@ -20,8 +20,12 @@
                         <i class="fas fa-search"></i>
                     </button>
                 </div>
-               <div class="navbar">
-                    <a class="active" href="index.html"><p>Home</p></a><a href="contact.html"><p>Contact</p></a><a href="info.html"><p>Info</p></a>
+               <div>
+                  <ul>
+                   <li><a class="active" href="index.html"><p>Home</p></a></li>
+                   <li><a href="contact.html"><p>Contact</p></a></li>
+                   <li><a href="info.html"><p>Info</p></a></li>
+                  </ul>    
             </div>
             </form>
         </nav>
