--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     </button>
                 </div>
                <div>
-                  <ul>
+                  <ul class="navbar">
                    <li><a class="active" href="index.html"><p>Home</p></a></li>
                    <li><a href="contact.html"><p>Contact</p></a></li>
                    <li><a href="info.html"><p>Info</p></a></li>
