--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                 </div>
                <div>
                   <ul class="navbar">
-                   <li><a class="active" href="index.html"><p>Home</p></a></li>
-                   <li><a href="contact.html"><p>Contact</p></a></li>
-                   <li><a href="info.html"><p>Info</p></a></li>
+                   <li><a class="active" href="index.html">Home</a></li>
+                   <li><a href="contact.html">Contact</a></li>
+                   <li><a href="info.html">Info</a></li>
                   </ul>    
             </div>
             </form>
