--- a/info.html
+++ b/info.html
@@ -11,12 +11,12 @@
 </head>
 <body>
     <div>
-        <ul class="navbar">
-            <li><a class="active" href="index.html"><i class="fa fa-home fa-2x"></i></a></li>
-            <li><a href="contact.html"><i class="fa fa-address-book fa-2x"></i></a></li>
-            <li><a href="info.html"><i class="fa fa-info fa-2x"></i></a></li>
-        </ul>
-    </div>
+       <ul class="navbar">
+          <li><a class="active" href="index.html">Home</a></li>
+          <li><a href="contact.html">Contact</a></li>
+           <li><a href="info.html">Info</a></li>
+       </ul>    
+     </div>
     <div>
         <h1>Gnatiuk<br>Renovering<br>Och<br>Nybyggnad</h1>
         <h2>GRON Bygg är en enskild firma som erbjuder tjänster inom byggverksamhet.<br>Renoveringar och tillbyggnad till företag och hushåll.<br>GRON Bygg registrerades 2021-05-27 har registrerat som arbetsgivare.</h2>
