--- a/contact.html
+++ b/contact.html
@@ -18,11 +18,11 @@ require_once 'DBconnect.php';
 </head>
 <body>
     <div>
-        <ul class="navbar">
-            <li><a class="active" href="index.html"><i class="fa fa-home fa-2x"></i></a></li>
-            <li><a href="contact.html"><i class="fa fa-address-book fa-2x"></i></a></li>
-            <li><a href="info.html"><i class="fa fa-info fa-2x"></i></a></li>
-        </ul>
+           <ul class="navbar">
+             <li><a class="active" href="index.html">Home</a></li>
+             <li><a href="contact.html">Contact</a></li>
+             <li><a href="info.html">Info</a></li>
+            </ul>    
     </div>
     <table class="table" border="1">
 
