--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,7 @@ require_once 'DBconnect.php';
     <meta charset="UTF-8" />
     <title>Gron bygg | Contact</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="media-queries.css" />
     <link href="/Gronbygg/libs/fontawesome/css/all.css" rel="stylesheet">
     <link rel="stylesheet" href="/Gronbygg/libs/font-awesome/css/font-awesome.min.css">
     <link href="/Gronbygg/libs/bootstrap/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
