--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <i class="fas fa-search"></i>
                     </button>
                 </div>
-               <div>
+               <div class="wrapper">
                   <ul class="navbar">
                    <li><a class="active" href="index.html">Home</a></li>
                    <li><a href="contact.html">Contact</a></li>
