--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@ require_once 'DBconnect.php';
     <!-- fontawesome.com -->
 </head>
 <body>
-    <div class="wrapper">
+    <div class="header">
            <ul class="navbar">
              <li><a class="active" href="index.html">Home</a></li>
              <li><a href="contact.html">Contact</a></li>
