--- a/info.html
+++ b/info.html
@@ -11,7 +11,7 @@
     <!-- fontawesome.com -->
 </head>
 <body>
-    <div class="wrapper">
+    <div class="header">
        <ul class="navbar">
           <li><a class="active" href="index.html">Home</a></li>
           <li><a href="contact.html">Contact</a></li>
