--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- fontawesome.com -->
     <meta name="google-site-verification" content="ZcVfLN_Qr3BhKJhsBIsrHu68bhbpWWmGUBHSlr1W25c" />
 </head>
-    <body>
+    <body class="header">
         <nav>
             </div>
             <form type="Get" action="contact.html">
@@ -21,7 +21,7 @@
                         <i class="fas fa-search"></i>
                     </button>
                 </div>
-               <div class="header">
+               <div>
                   <ul class="navbar">
                    <li><a class="active" href="index.html">Home</a></li>
                    <li><a href="contact.html">Contact</a></li>
