--- a/contact.html
+++ b/contact.html
@@ -17,8 +17,8 @@ require_once 'DBconnect.php';
     <link href="/Gronbygg/libs/bootstrap/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- fontawesome.com -->
 </head>
-<body>
-    <div class="header">
+<body class="header">
+    <div>
            <ul class="navbar">
              <li><a class="active" href="index.html">Home</a></li>
              <li><a href="contact.html">Contact</a></li>
