--- a/info.html
+++ b/info.html
@@ -19,9 +19,9 @@
        </ul>    
      </div>
     <div class="info">
-        <h1>Gnatiuk<br>Renovering<br>Och<br>Nybyggnad</h1>
-        <h2>GRON Bygg är en enskild firma som erbjuder tjänster inom byggverksamhet.<br>Renoveringar och tillbyggnad till företag och hushåll.<br>GRON Bygg registrerades 2021-05-27 har registrerat som arbetsgivare.</h2>
-        <h2>Gron bygg företaget är verksamt inom reparation och konstruktion.<h2>
+        <h1 style="background:#FFF">Gnatiuk<br>Renovering<br>Och<br>Nybyggnad</h1>
+        <h2 style="background:#FFF">GRON Bygg är en enskild firma som erbjuder tjänster inom byggverksamhet.<br>Renoveringar och tillbyggnad till företag och hushåll.<br>GRON Bygg registrerades 2021-05-27 har registrerat som arbetsgivare.</h2>
+        <h2 style="background:#FFF">Gron bygg företaget är verksamt inom reparation och konstruktion.<h2>
     </div>
     <div class="gron"><a href="https://www.bolagsfakta.se/740514YDYJ00001-GRON_Bygg#om-foretaget" target="_blank" style="color: #000000"><h1><b>Gron bygg</b></h1><a></div>
 </body>
