--- a/info.html
+++ b/info.html
@@ -18,8 +18,8 @@
            <li><a href="info.html">Info</a></li>
        </ul>    
      </div>
-    <section>
-    <div class="info">
+    <section class="info">
+    <div>
         <h1>Gnatiuk<br>Renovering<br>Och<br>Nybyggnad</h1>
         <h2>GRON Bygg är en enskild firma som erbjuder tjänster inom byggverksamhet.<br>Renoveringar och tillbyggnad till företag och hushåll.<br>GRON Bygg registrerades 2021-05-27 har registrerat som arbetsgivare.</h2>
         <h2>Gron bygg företaget är verksamt inom reparation och konstruktion.<h2>
