--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="/Gronbygg/libs/bootstrap/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- fontawesome.com -->
     <meta name="google-site-verification" content="ZcVfLN_Qr3BhKJhsBIsrHu68bhbpWWmGUBHSlr1W25c" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="initial-scale=1">
 </head>
     <body class="header">
         <nav>
