--- a/info.html
+++ b/info.html
@@ -19,8 +19,8 @@
      </div>
 
     <section>
-<div class="gron"><a href="https://www.bolagsfakta.se/740514YDYJ00001-GRON_Bygg#om-foretaget" target="_blank" style="color: #000000"><h1><b>Gron bygg</b></h1><a></div>
-<div class="gron2"><h1>Gnatiuk<br>Renovering<br>Och<br>Nybyggnad</h1></div>
+<div class="gron, info"><a href="https://www.bolagsfakta.se/740514YDYJ00001-GRON_Bygg#om-foretaget" target="_blank" style="color: #000000"><h1><b>Gron bygg</b></h1><a></div>
+<div class="gron2, info"><h1>Gnatiuk<br>Renovering<br>Och<br>Nybyggnad</h1></div>
     <div class="info">
         <h2>GRON Bygg är en enskild firma som erbjuder tjänster inom byggverksamhet.<br>Renoveringar och tillbyggnad till företag och hushåll.<br>GRON Bygg registrerades 2021-05-27 har registrerat som arbetsgivare.</h2>
         <h2>Gron bygg företaget är verksamt inom reparation och konstruktion.<h2>
