--- a/info.html
+++ b/info.html
@@ -18,8 +18,8 @@
        </ul>    
      </div>
 <section>
-<div class="gron"><a href="https://www.bolagsfakta.se/740514YDYJ00001-GRON_Bygg#om-foretaget" target="_blank" style="color: #000000"><h1><b>Gron bygg</b></h1><a></div>
-<div class="gron2"><h1>Gnatiuk<br>Renovering<br>Och<br>Nybyggnad</h1></div>
+<div class="gron, info"><a href="https://www.bolagsfakta.se/740514YDYJ00001-GRON_Bygg#om-foretaget" target="_blank" style="color: #000000"><h1><b>Gron bygg</b></h1><a></div>
+<div class="gron2, info"><h1>Gnatiuk<br>Renovering<br>Och<br>Nybyggnad</h1></div>
 </section>
     <section>
     <div class="info">
