--- a/info.html
+++ b/info.html
@@ -17,7 +17,7 @@
            <li><a href="info.html">Info</a></li>
        </ul>    
      </div>
-<section>
+<section class="gron">
 <div class="gron"><a href="https://www.bolagsfakta.se/740514YDYJ00001-GRON_Bygg#om-foretaget" target="_blank" style="color: #000000"><h1><b>Gron bygg</b></h1><a></div>
 <div class="gron2"><h1>Gnatiuk<br>Renovering<br>Och<br>Nybyggnad</h1></div>
 </section>
