--- a/info.html
+++ b/info.html
@@ -19,7 +19,7 @@
      </div>
 <section>
 <div class="gron"><a href="https://www.bolagsfakta.se/740514YDYJ00001-GRON_Bygg#om-foretaget" target="_blank" style="color: #000000"><h1><b>Gron bygg</b></h1><a></div>
-<div class="gron2"><h1>Gnatiuk<br>Renovering<br>Och<br>Nybyggnad</h1></div>
+<div class="gron2"><h1><strong>G</strong>natiuk<br><strong>R</strong>enovering<br><strong>O</strong>ch<br><strong>N</strong>ybyggnad</h1></div>
 </section>
     <section>
     <div class="info">
