--- a/info.html
+++ b/info.html
@@ -17,7 +17,7 @@
            <li><a href="info.html">Info</a></li>
        </ul>    
      </div>
-<section>
+<section class="1">
 <div class="gron"><a href="https://www.bolagsfakta.se/740514YDYJ00001-GRON_Bygg#om-foretaget" target="_blank" style="color: #000000"><h1><b>Gron bygg</b></h1><a></div>
 <div class="gron2"><h1><strong>G</strong>natiuk<br><strong>R</strong>enovering<br><strong>O</strong>ch<br><strong>N</strong>ybyggnad</h1></div>
 </section>
