--- a/info.html
+++ b/info.html
@@ -20,8 +20,8 @@
 <section>
 <div class="gron"><a href="https://www.bolagsfakta.se/740514YDYJ00001-GRON_Bygg#om-foretaget" target="_blank" style="color: #000000"><h1><b>Gron bygg</b></h1><h1><strong>G</strong>natiuk<br><strong>R</strong>enovering<br><strong>O</strong>ch<br><strong>N</strong>ybyggnad</h1><a></div>
 </section>
-    <section>
-    <div class="info">
+    <section class="info">
+    <div>
         <h2>GRON Bygg är en enskild firma som erbjuder tjänster inom byggverksamhet.<br>Renoveringar och tillbyggnad till företag och hushåll.<br>GRON Bygg registrerades 2021-05-27 har registrerat som arbetsgivare.</h2>
         <h2>Gron bygg företaget är verksamt inom reparation och konstruktion.<h2>
     </div>
